# logger

./: .gitignore  Android.bp  CMakeLists.txt  README.md  TODO.txt
examples/: full-log.txt  messages-log.txt
include/: logger.hpp
include/nkh-lab/: logger-impl.hpp  logger-ivi.hpp  logger-logcat.hpp  logger-msgtype.hpp  logger-types.hpp  logger.hpp
src/: logger.cpp  logger.hpp  main.cpp
tests/: Android.bp  CMakeLists.txt  LoggerMainTest.cpp  MainLoggerTest.cpp
